tests/macro-tests/cases/widget_new/missing_value5.stderr
error: expected expression, found `)`
  --> cases/widget_new/missing_value5.rs:5:13
   |
5  |       let _ = Wgt! {
   |  _____________^
6  | |         cursor = #[allow(unused_imports)]
7  | |         margin = {
8  | |             use zng::layout::PxPoint;
...  |
11 | |     };
   | |_____^ expected expression
   |
   = note: this error originates in the macro `zng::__proc_macro_util::widget::widget_new` which comes from the expansion of the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `;`
 --> cases/widget_new/missing_value5.rs:7:9
  |
7 |         margin = {
  |         ^^^^^^

warning: unused import: `mouse::cursor`
 --> cases/widget_new/missing_value5.rs:1:32
  |
1 | use zng::{APP, layout::margin, mouse::cursor, widget::Wgt};
  |                                ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `zng::layout::PxPoint`
 --> cases/widget_new/missing_value5.rs:8:17
  |
8 |             use zng::layout::PxPoint;
  |                 ^^^^^^^^^^^^^^^^^^^^
